--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,34 @@ footer {
     text-align: center;
   }
 }
+
+form{
+  margin-top: 50px
+}
+.form-control{
+  width: 600px;
+  background: #0E86D4;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid gray;
+  color: #fff;
+  font-size: 18px;
+  margin-bottom: 16px;
+}
+input{
+  height: 45px;
+}
+form .submit{
+  background: #ff5722;
+  border-color: transparent;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 50px;
+  margin-top: 20px;
+  }
+  form .submit:hover{
+    background-color: #f44336;
+    cursor: pointer
+  }
